--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/jason19956779/gnomonic_projection#readme",
   "dependencies": {
     "mathjs": "^3.16.5",
+    "nexe": "^2.0.0-rc.20",
     "readline-sync": "^1.4.7"
   }
 }
